Added support for a contact list
